# jots

./: .gitignore  Cargo.toml  README.md
assets/: readme.md
docs/: design.md
jotdown/: Cargo.toml  README.md
jotdown/src/: lib.rs  model.rs  parsers.rs  tests.rs  text_mods.rs  unparsers.rs
jots/: Cargo.toml
jots-widgets/: Cargo.toml
jots-widgets/src/: lib.rs  tree_list.rs
jots-widgets/src/tree_list/: node.rs  style.rs
jots/src/: app.rs  editor.rs  error.rs  fs.rs  main.rs  sidebar.rs
src/: app.rs  goal_tree.rs  main.rs
