[package]
name = "jots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
# iced = { git = "https://github.com/iced-rs/iced.git", features = ["debug", "tokio"] }
iced = { version = "*", features = ["debug", "tokio"] }
tokio = { version = "1.35", features = ["full"] }
jotdown = { path = "../jotdown" }
